--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-<meta name="author" content="Luka Jović | Portfolio">
+<meta name="author" content="Luka Jović">
 <meta name="keywords" content="portfolio, web, developer, luka, jovic">
 <meta name="description" content="This is the website that represents the portfolio of Luka Jović.">
 <meta name="language" content="English, Serbian">
-<meta name="copyright" content="Luka Jović - 2019">
+<meta name="copyright" content="Luka Jović - 2021">
 
 <title>Luka Jović</title>
-<link rel="icon" type="favicon" href="images/avatart.png">
+<link rel="icon" type="favicon" href="images/avatarn.png">
 
 <meta name="Googlebot" content="index, follow">
 <meta name="revisit-after" content="3">
