--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 	<div id="fullpage">
 		<div class="section">
 			<div class="main">
-				<img src="images/avatart.png" class="avatar">
+				<img src="images/avatarnc.png" class="avatar">
 				<div class="name">
 					Luka Jović
 					<br>
@@ -59,7 +59,7 @@
 		<div class="section">
 			<div class="about">
 				<div class="navbar">
-					<img src="images/avatart.png" class="navavatar">
+					<img src="images/avatarn.png" class="navavatar">
 					<span class="navname">
 						Luka Jović
 					</span>
