--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <meta name="copyright" content="Luka Jović - 2021">
 
 <title>Luka Jović</title>
-<link rel="icon" type="favicon" href="images/avatarn.png">
+<link rel="icon" type="favicon" href="images/avatarn.PNG">
 
 <meta name="Googlebot" content="index, follow">
 <meta name="revisit-after" content="3">
@@ -23,7 +23,7 @@
 <meta property="og:description" content="This is the website that represents the portfolio of Luka Jović.">
 <meta property="og:image" content="images/logo.png">
 <meta property="og:title" content="Luka Jović | Portfolio">
-<meta property="og:url" content="http://jovic.online">
+<meta property="og:url" content="https://lkjvc.github.io">
 
 <meta name="theme-color" content="#000000">
 <meta name="msapplication-navbutton-color" content="#000000">
