--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
 	<div id="fullpage">
 		<div class="section">
 			<div class="main">
-				<img src="images/avatart.png" class="avatar">
+				<img src="images/avatarnc.png" class="avatar">
 				<div class="name">
 					Luka Jović
 					<br>
 					<span class="description">
-						Web Designer & Developer
+						I simply love creating.
 					</span>
 				</div>
 			</div>
@@ -68,7 +68,7 @@
 		<div class="section">
 			<div class="about">
 				<div class="navbar">
-					<img src="images/avatart.png" class="navavatar">
+					<img src="images/avatarn.png" class="navavatar">
 					<span class="navname">
 						Luka Jović
 					</span>
@@ -80,7 +80,7 @@
 		<div class="section">
 			<div class="whatido">
 				<div class="navbar1">
-					<img src="images/avatart.png" class="navavatar1">
+					<img src="images/avatarn.png" class="navavatar1">
 					<span class="navname1">
 						Luka Jović
 					</span>
