--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <meta name="copyright" content="Luka Jović - 2019">
 
 <title>Luka Jović</title>
-<link rel="icon" type="favicon" href="images/avatart.png">
+<link rel="icon" type="favicon" href="images/avatarn.PNG">
 
 <meta name="Googlebot" content="index, follow">
 <meta name="revisit-after" content="3">
@@ -23,7 +23,7 @@
 <meta property="og:description" content="This is the website that represents the portfolio of Luka Jović.">
 <meta property="og:image" content="images/logo.png">
 <meta property="og:title" content="Luka Jović | Portfolio">
-<meta property="og:url" content="http://jovic.online">
+<meta property="og:url" content="https://lkjvc.github.io">
 
 <meta name="theme-color" content="#000000">
 <meta name="msapplication-navbutton-color" content="#000000">
@@ -68,7 +68,7 @@
 		<div class="section">
 			<div class="about">
 				<div class="navbar">
-					<img src="images/avatarn.png" class="navavatar">
+					<img src="images/avatarn.PNG" class="navavatar">
 					<span class="navname">
 						Luka Jović
 					</span>
@@ -80,7 +80,7 @@
 		<div class="section">
 			<div class="whatido">
 				<div class="navbar1">
-					<img src="images/avatarn.png" class="navavatar1">
+					<img src="images/avatarn.PNG" class="navavatar1">
 					<span class="navname1">
 						Luka Jović
 					</span>
@@ -110,7 +110,7 @@
 					</div>
 					<div class="w3-col l3 m3">
 						<div class="card">
-							<img src="images/wid4icon.png" class="wid4icon"><br>
+							<img src="images/wid4icon.PNG" class="wid4icon"><br>
 							<span class="w3-xlarge">Post Production</span>
 							<p>something about this something about this something about this something about this something about this something about this something about this something about this </p>
 						</div>
