--- a/index.html
+++ b/index.html
@@ -68,19 +68,19 @@
 		<div class="section">
 			<div class="about">
 				<div class="navbar">
-					<img src="images/avatarn.PNG" class="navavatar">
+					<img src="images/avatarnc.png" class="navavatar">
 					<span class="navname">
 						Luka Jović
 					</span>
 				</div>
 				<span class="aboutheader">About Me</span>
-				<p class="abouttext">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</p>
+				<p class="abouttext">Oi, name's Luka, age is 19. Welcome to my very own website. Here, you can find all my work that I'm (un)proud of. I study - or at least try to study - audio & video technologies at the <a href="https://www.viser.edu.rs/?userLanguage=eng" target="_blank"><i>Academy of Technical and Art Applied Studies, School of Electrical and Computer Engineering</i></a> in Belgrade. <br /><br />I do lots of stuff. Everything I do is based on my irrationally creative mind. My inspiration comes from utterly random things. The fuel is habitually coffee, and the motivation can be anything: love, travelling, respect, perception of conveying my own ideas, and what not. <br /><br />Other than what is stated down below, in free time I am likely to try new things or practice old hobbies. I play music on a guitar and Serbian flute, I sing along for myself, I mess around with music in DAWs, I play video games, I watch movies and shows, I drink beer (yes, the taste is really exquisite), and take part in many other shenanigans as long as it blends in nicely with my creativity at some point.  </p>
 			</div>
 		</div>
 		<div class="section">
 			<div class="whatido">
 				<div class="navbar1">
-					<img src="images/avatarn.PNG" class="navavatar1">
+					<img src="images/avatarnc.png" class="navavatar1">
 					<span class="navname1">
 						Luka Jović
 					</span>
